# hit-leiden

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
benchmarks/criterion/: hit_leiden_suite.rs
docs/: README.md
docs/guide/: hit_leiden_explained.md
docs/math/: hit_leiden_spec.md
proto/: profile.proto
scripts/: download_ca_hepth.sh  download_uk_2007.sh  run_igraph_leiden.py
src/: lib.rs  main.rs
src/benchmark/: charting.rs  compare.rs  dynamic_graph.rs  hardware_profile.rs  hit_leiden_incremental.rs  igraph_baseline.rs  igraph_cache.rs  manifest.rs  mod.rs  profiling.rs  progress.rs  release_gate.rs  runner.rs  toon_export.rs
src/cli/: benchmark.rs  mod.rs  options.rs  run.rs
src/core/: backend.rs  config.rs  error.rs  mod.rs  report.rs  types.rs
src/core/algorithm/: deterministic.rs  hit_leiden.rs  mod.rs  parallel_frontier.rs  throughput.rs
src/core/graph/: in_memory.rs  mod.rs  neo4j_mapping.rs  neo4j_snapshot.rs  source.rs
src/core/partition/: mod.rs  state.rs
src/core/report/: writer.rs
src/core/runtime/: mod.rs  orchestrator.rs  resolver.rs
src/core/validation/: equivalence.rs  invariants.rs  mod.rs
tests/: contract_tests.rs  integration_tests.rs  property_tests.rs
tests/contract/: mod.rs  test_compare_baseline.rs  test_run_validate.rs
tests/integration/: mod.rs  test_benchmark_reproducibility.rs  test_connected_graph_not_all_singletons.rs  test_default_config_minimal_args.rs  test_deterministic_identity.rs  test_neo4j_snapshot_parity.rs  test_release_gate_live_query_ineligible.rs  test_throughput_equivalence.rs
tests/property/: mod.rs  test_partition_invariants.rs
tests/unit/: mod.rs
